# cosmos-project-template

./: .gitignore  README.md
cmake/: toolchain_rpi_linux.cmake
docker/: README
docker/agents/agent_ground/: Dockerfile  docker-entrypoint.sh
docker/agents/agent_obc/: Dockerfile  docker-entrypoint.sh
docker/compose/full_demo_single_pc/: docker-compose.yml
docs/: OverallDesign.md
source/: CMakeLists.txt  agent_template.cpp
source/libraries/: CMakeLists.txt
source/libraries/subagent/: CMakeLists.txt
source/libraries/subagent/ground/: CMakeLists.txt  ground_subagents.cpp  ground_subagents.h
source/libraries/subagent/node0/: CMakeLists.txt  exec_subagent.cpp  exec_subagent.h  obc_subagents.cpp  obc_subagents.h  sensor_subagent.cpp  sensor_subagent.h
source/libraries/telem_helpers/: CMakeLists.txt  TelemToDatabase.cpp  TelemToDatabase.h
source/libraries/utils/: CMakeLists.txt  common.cpp  common.h  utils.cpp  utils.h
source/programs/: CMakeLists.txt
source/programs/agents/: CMakeLists.txt  agent_template.cpp
source/programs/agents/ground/: CMakeLists.txt  agent_ground.cpp  agent_ground.h
source/programs/agents/node0/: CMakeLists.txt  agent_obc.cpp  agent_obc.h
source/programs/general/: CMakeLists.txt  make_devices.cpp
source/resources/: nodeids.ini
